<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>pt.unl.fct.di.scc</groupId>
	<artifactId>scc2324-phase1</artifactId>
	<version>1.0</version>
	<packaging>war</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<authors>60483-60665-60691</authors>
		<java.version>11</java.version>
		<functionAppName>scc24funwesteurope60665</functionAppName>
		<functionAppRegion>westeurope</functionAppRegion>
		<functionPricingTier>B1</functionPricingTier>
		<functionResourceGroup>scc24-rg-westeurope-60665</functionResourceGroup>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.microsoft.azure.functions</groupId>
			<artifactId>azure-functions-java-library</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>jakarta.ws.rs</groupId>
			<artifactId>jakarta.ws.rs-api</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-core</artifactId>
			<version>6.2.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jaxb-provider</artifactId>
			<version>6.2.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jackson2-provider</artifactId>
			<version>6.2.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-servlet-initializer</artifactId>
			<version>6.2.5.Final</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-storage-blob</artifactId>
			<version>12.24.0</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-cosmos</artifactId>
			<version>4.51.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.20.0</version>
		</dependency>
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>4.2.3</version>
		</dependency>
		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
			<version>0.4</version>
		</dependency>

	</dependencies>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.3.2</version>
				<configuration>
					<warSourceDirectory>WebContent</warSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.microsoft.azure</groupId>
				<artifactId>azure-webapp-maven-plugin</artifactId>
				<version>2.12.0</version>
			    <configuration>
			        <schemaVersion>V2</schemaVersion>
			        <pricingTier>F1</pricingTier>
			        <region>westeurope</region>
			        <runtime>
			            <os>linux</os>
			            <javaVersion>Java 17</javaVersion>
			            <webContainer>Tomcat 10.0</webContainer>
			        </runtime>
			        <deployment>
			            <resources>
			                <resource>
			                    <directory>${project.basedir}/target</directory>
			                    <includes>
			                        <include>*.war</include>
			                    </includes>
			                </resource>
			            </resources>
			        </deployment>
			        <resourceGroup>scc24-rg-westeurope-60665</resourceGroup>
			        <appName>scc24appwesteurope60665</appName>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>com.microsoft.azure</groupId>
				<artifactId>azure-functions-maven-plugin</artifactId>
				<version>1.28.0</version>
				<configuration>
					<!-- function app name -->
					<appName>${functionAppName}</appName>
					<!-- function app resource group -->
					<resourceGroup>${functionResourceGroup}</resourceGroup>
					<!-- function app service plan name -->
					<!-- <appServicePlanName>java-functions-app-service-plan</appServicePlanName> -->
					<!-- function app region -->
					<!-- refers https://github.com/microsoft/azure-maven-plugins/wiki/Azure-Functions:-Configuration-Details#supported-regions
						for all valid values -->
					<region>${functionAppRegion}</region>
					<!-- function pricingTier, default to be consumption if not specified -->
					<!-- refers https://github.com/microsoft/azure-maven-plugins/wiki/Azure-Functions:-Configuration-Details#supported-pricing-tiers
						for all valid values -->
					<pricingTier>${functionPricingTier}</pricingTier>
					<!-- Whether to disable application insights, default is false -->
					<!-- refers https://github.com/microsoft/azure-maven-plugins/wiki/Azure-Functions:-Configuration-Details
						for all valid configurations for application insights -->
					<disableAppInsights></disableAppInsights>
					<runtime>
						<!-- runtime os, could be windows, linux or docker -->
						<os>linux</os>
						<javaVersion>11</javaVersion>
					</runtime>
					<appSettings>
						<property>
							<name>FUNCTIONS_EXTENSION_VERSION</name>
							<value>~2</value>
						</property>
						<property>
							<name>WEBSITE_RUN_FROM_PACKAGE</name>
							<value>1</value>
						</property>
					</appSettings>
				</configuration>
				<executions>
					<execution>
						<id>package-functions</id>
						<goals>
							<goal>package</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--Remove obj folder generated by .NET SDK in maven clean -->
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>obj</directory>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>